# Books_shop

./: .gitignore  README.md  REEADME.md  docker-compose.yml  manage.py  pyproject.toml
Books_shop/: asgi.py  settings.py  urls.py  wsgi.py
books/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_authors_alter_book_title_and_more.py
user/: manager.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_author_username.py  0003_alter_author_birthday_alter_author_patronymic.py  0004_alter_author_birthday_alter_author_patronymic.py  0005_alter_author_birthday_alter_author_patronymic.py  0006_author_is_staff_author_is_superuser.py
